--- a/style.css
+++ b/style.css
@@ -3,5 +3,37 @@
 body {
   font-family: "Roboto";
   display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background-color: #eeeeee;
+  overflow-x: hidden;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 1rem;
+}
+
+.box {
+  width: 400px;
+  height: 200px;
+  background-color: #2856e0;
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 5px #d195f9;
+  display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  margin: 1rem;
+  transform: translateX(-400%);
+  transition: transform 0.4s ease;
+}
+
+.box:nth-of-type(even) {
+  transform: translateX(400%);
+}
+
+.box.show {
+  transform: translateX(0);
 }
